--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,17 +1,16 @@
 env:
   TERM: xterm-256color
 window:
-  opacity: 0.9
   padding:
-    x: 10
-    y: 10
-  dynamic_padding: false
-  dynamic_title: true
+    x: 8
+    y: 8
+  dynamic_padding: true
 font:
   normal:
-    family: FiraCode Nerd Font
+    family: FiraCode Nerd Font Mono
+    style: regular
   bold:
-    family: Fira code
+    family: FiraCode Nerd Font Mono
     style: bold
   size: 10
 # Colors (Ayu Dark)
@@ -42,4 +41,3 @@ colors:
     magenta: '0xFFEE99'
     cyan:    '0x95E6CB'
     white:   '0xFFFFFF'
-
